--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>My Office</title>
   </head>
-  <body class='skin-black fixed sidebar-mini'>
+  <body class='skin-blue fixed sidebar-mini'>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
